# autonomous-agents

./: .gitignore  Modelfile.gemma4-e2b-agent  Modelfile.gemma4-e4b-candidate-ctx32k  README.md  launch.bat  launch.ps1  pyproject.toml  stop.bat  stop.ps1
agent_runtime/: pyproject.toml
agent_runtime/agent_runtime/: __init__.py  article_note.py  chunked_read.py  claim_verify.py  clarification.py  collision.py  discovery_tools.py  factory.py  heal_router.py  identity.py  incremental.py  local_trace.py  local_trace_md.py  missing_spec.py  plan_tools.py  planner.py  reactor.py  research_tree.py  review_injection.py  roles.py  runtime.py  scheduler.py  scope.py  selfheal.py  shape_author.py  shape_selector.py  shapes.py  source_tools.py  status.py  stub.py  synth_tools.py  toolargs.py  tracing.py  verify.py
agent_runtime/agent_runtime/bundles/: __init__.py  base.py  codebase.py  file.py  planning.py  research.py  research_read.py  web_ingest.py
agent_runtime/agent_runtime/shapes/: codebase-summary.toml  concurrent-multi-topic-gathering.toml  deep-research.toml  iterative-deep-research.toml  iterative-writing-improvement.toml  linear.toml  modular-parallel.toml  schedule-leg.toml  write-file.toml
agent_runtime/tests/: test_article_note.py  test_b1_tool_driven_authoring.py  test_b2_dag_edge_guarantees.py  test_b5_output_format_spec.py  test_bundle_self_select_d221.py  test_c10_output_defects.py  test_c11_html_styling_spec.py  test_c12_citation_fidelity_singledoc.py  test_c13_source_scoping.py  test_c14_section_dedup.py  test_c1_stepwise_synthesis.py  test_c1b_plan_chaining.py  test_chunked_read.py  test_claim_verify.py  test_collision.py  test_compose.py  test_d221_memory_handle.py  test_d235_read_hierarchy.py  test_dag_validation_fallback.py  test_decide_followup.py  test_deep_research_verdict_repair.py  test_default_research_spec.py  test_f5_requested_specs.py  test_factory_specs.py  test_heal_router.py  test_inject.py  test_lifecycle_gate_all_paths.py  test_lifecycle_inline_fix.py  test_missing_from_requested.py  test_no_fab_url_guard.py  test_no_steering_strings.py  test_overall_goal_d39.py  test_p2_2_orchestration.py  test_p2_3_anchored_insert.py  test_p2_4_shape_spec.py  test_p2_5_inject_thread.py  test_p2_5b_growable.py  test_research_read_fetch.py  test_rp3b_structure_authoring_retired.py  test_rp3c_deflag_and_output_agnostic.py  (+43 more)
chat_app/: pyproject.toml
chat_app/chat_app/: __init__.py  agentic.py  app.py  approval.py  authoring_tools.py  conversation_memory.py  cron_scheduler.py  curation.py  digest.py  parity.py  persistence.py  routes.py  runs.py  shape_authoring.py  shape_chat.py  shape_config.py  spec_chat.py  specializations.py  workflow.py
chat_app/chat_app/static/: index.html
chat_app/chat_app/static/assets/: index-BrLguTWE.js  index-BrLguTWE.js.map  index-BsHqEk-o.css  index-CWIVvd7z.js  index-CWIVvd7z.js.map  index-ChnfTZjh.js  index-ChnfTZjh.js.map  index-Cpy4Xio0.css  index-D8Jxoxzg.css
chat_app/chat_app/static/bg/: kitsune-bg-1280.avif
chat_app/frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
chat_app/frontend/public/bg/: kitsune-bg-1672.avif
chat_app/frontend/src/: App.css  App.tsx  main.tsx
chat_app/frontend/src/api/: client.ts  lifecycle.ts  queries.ts  types.ts
chat_app/frontend/src/hooks/: useChatStream.ts  useLambdaStream.ts  useTaskRun.ts  useToolActivity.ts
chat_app/frontend/src/theme/: fonts.css  global.css  tokens.css  (+1 more)
chat_app/tests/: test_as1_generic_loop.py  test_authoring_tools.py  test_b5_node_tool_wiring.py  test_c13_deep_research_sectioned.py  test_c1b_plan_chain_routing.py  test_chat_memory.py  test_chat_planner_wiring.py  test_cron_scheduler_s6.py  test_curation_d230.py  test_d221_synthesizer_stream.py  test_d221_write_planning_event.py  test_deep_research_breadth.py  test_f5_routing.py  test_missing_spec_structural_trigger.py  test_n4w_served_route_lanes.py  test_p2_5_consolidation.py  test_research_digest.py  test_rp4c_schedule_reliability.py  test_rp6a_write_file_shape_on_disk.py  test_rp6b_phases_declared_in_shape.py  test_rp6c_b2_write_authoring_hook.py  test_run_id_trace_correlation.py  test_s13_depth_configurable.py  test_s13_plan_chain_tree_loop.py  test_s13_spec_and_shape.py  test_s13_writer_no_fabricate.py  test_s15_a17_session_binding.py  test_s15_a22_session_readback.py  test_s15_research_brief_store.py  test_sa1_registry_foundation_a0.py  test_sa6_research_methodology_and_skeleton_fill.py  test_sb5_sectioned_emergence.py  test_sb6_write_fold_antifab.py  test_shape_authoring.py  test_shape_chat.py  test_shape_config.py  test_spec_chat.py  test_workflow_scheduler.py  test_workflows_route.py
llm_framework/: pyproject.toml
llm_framework/llm_framework/: __init__.py  chain.py  context.py  local_capture.py  stages.py  tokens.py  transport.py
llm_framework/tests/: test_interceptor.py  test_observation_envelope.py  test_role_normalization.py
memory/: pyproject.toml
memory/memory/: __init__.py  compaction.py  embedder.py  recall.py  recall_api.py  store.py
memory/tests/: test_compaction.py  test_recall.py  test_recall_api.py  test_store.py
reactive_tools/: pyproject.toml
reactive_tools/reactive_tools/: __init__.py  bridge.py  config.py  cron_store.py  cron_tools.py  email_tool.py  event_plane.py  file_tools.py  lambda_tools.py  scheduler.py  send_mail_tool.py  subscriptions.py  tool_hook.py  tool_registry.py  tools.py  web_tools.py
reactive_tools/tests/: test_config.py  test_cron_tools.py  test_email_tool.py  test_file_write_envelope_guard.py  test_image_search.py  test_reactive_scheduler.py  test_s13_web_tools_p21.py  test_send_mail_tool.py  test_subscriptions.py  test_tool_registry.py  test_tools.py  test_web_tools.py
specialization/: pyproject.toml
specialization/specialization/: __init__.py  compiler.py  conversation.py  engine.py  loader.py  model.py  registry.py  research.py  seed.py  ui.py
specialization/tests/: test_conversation.py  test_engine.py  test_registry.py  test_research.py  test_ui.py  test_workflow_model.py
(+56 files in other folders)
