[project]
name = "reactive-agents"
version = "0.1.0"
description = "Standalone in-process reactive multi-agent system (phi4-mini runtime, zero Claude). uv workspace root (d11)."
requires-python = ">=3.11"
# d11: d2 mandates ONE in-process process, so every component must import every
# other in the SAME interpreter resolved into ONE shared .venv. This root is a
# uv WORKSPACE that folds each component in as a member and depends on them so
# `uv sync` installs them all (editable) into the single root .venv. Components
# no longer carry isolated venvs.
dependencies = [
    "llm-framework",
    "reactive-tools",
    "memory",
    "specialization",
    "agent-runtime",
    "chat-app",
]

# Virtual workspace root: it is not itself a buildable/installable package — it
# exists only to own the workspace and pull the members into one environment.
[tool.uv]
package = false

[tool.uv.workspace]
members = ["llm_framework", "reactive_tools", "memory", "specialization", "agent_runtime", "chat_app"]

[tool.uv.sources]
llm-framework = { workspace = true }
reactive-tools = { workspace = true }
memory = { workspace = true }
specialization = { workspace = true }
agent-runtime = { workspace = true }
chat-app = { workspace = true }
