[project]
name = "chat-app"
version = "0.1.0"
description = "Single-process ASGI web app composing the whole ReactiveAgents stack in ONE interpreter (d2/d11). Stage A skeleton (s7/a1): proves the stack imports + wires; SSE/persistence/UI layered on later."
requires-python = ">=3.11"
# Web stack chosen for the single-ASGI SSE app (d2 single in-process process):
#   - fastapi/uvicorn  : the one ASGI app + dev server
#   - sse-starlette    : EventSourceResponse for the live event stream (later action)
# These are deps of THIS member ONLY — the other components stay web-agnostic.
#
# d11: this is a uv WORKSPACE MEMBER with NO isolated .venv. It resolves into the
# single shared root .venv (C:\Projects\ReactiveAgents\.venv) so it imports every
# sibling component in the SAME in-process interpreter (d2 — one process). The
# sibling deps below resolve via the root [tool.uv.sources] workspace mappings.
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "sse-starlette>=2.1",
    "llm-framework",
    "reactive-tools",
    "memory",
    "specialization",
    "agent-runtime",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chat_app"]
